# fcitx5-rime.js

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  index.html  package.json
.github/workflows/: ci.yml
demo/: index.html  package.json  vite.config.ts
demo/public/: README.md
demo/src/: App.vue
scripts/: install-deps.sh  prepack.sh
src/: fcitx5-rime.d.ts  rime.js
